updated notes, added logos for cybercamp

--- a/notes/Makefile
+++ b/notes/Makefile
@@ -12,6 +12,21 @@ all: 01slides_intro_cryptography.pdf 02slides_digital_logic.pdf 03slides_modern_
 04slides_attacks.pdf: 04slides_attacks.tex
 	pdflatex --shell-escape $<
 
+01slides_intro_cryptography.tex: preamble.tex
+	touch 01slides_intro_cryptography.tex
+
+02slides_digital_logic.tex: preamble.tex
+	touch 02slides_digital_logic.tex
+
+03slides_modern_crypto.tex: preamble.tex
+	touch 03slides_modern_crypto.tex
+
+04slides_attacks.tex: preamble.tex
+	touch 04slides_attacks.tex
+
 clean:
 	rm *.log *.out *.snm *.toc *.nav *.aux *.vrb
 
+rebuild:
+	rm 0[1234]*.pdf
+	make
